tests/machine/x/ocaml/var_assignment.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/var_assignment.ml", line 4, characters 7-8:
4 |   x := 2
           ^
Error: This expression has type int
       This is not a function; it cannot be applied.


Context (around line 4):
   2 | 
   3 | let () =
   4 |   x := 2
   5 |   print_endline !x
   6 | 
