tests/machine/x/ocaml/var_assignment.ml
let x = ref 1

let () =
  x := 2
  print_endline !x
